@@ -17,7 +17,6 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
 import net.minecraft.world.biome.Biome;
 import org.apache.commons.lang3.Validate;
-import org.apache.commons.lang3.tuple.Pair;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -95,9 +94,7 @@ public class BuildingInfo implements ILostChunkInfo {
     private Integer[] desiredTerrainCorrectionHeights = null;
     private Integer[] desiredMaxHeight1 = null;
 
-    // A list of todo's for mob spawners and other things
-    private final List<Pair<BlockPos, ConditionTodo>> mobSpawnerTodo = new ArrayList<>();
-    private final List<Pair<BlockPos, ConditionTodo>> lootTodo = new ArrayList<>();
+    // A list of todo's
     private final List<BlockPos> lightingUpdateTodo = new ArrayList<>();
     private final List<BlockPos> torchTodo = new ArrayList<>();
     private final List<BlockPos> saplingTodo = new ArrayList<>();
@@ -168,30 +165,6 @@ public class BuildingInfo implements ILostChunkInfo {
 
     public void clearLightingUpdateTodo() {
         lightingUpdateTodo.clear();
-    }
-
-    public void addSpawnerTodo(BlockPos pos, ConditionTodo mobId) {
-        mobSpawnerTodo.add(Pair.of(pos, mobId));
-    }
-
-    public void addLootTodo(BlockPos pos, @Nullable ConditionTodo lootTable) {
-        lootTodo.add(Pair.of(pos, lootTable));
-    }
-
-    public List<Pair<BlockPos, ConditionTodo>> getMobSpawnerTodo() {
-        return mobSpawnerTodo;
-    }
-
-    public List<Pair<BlockPos, ConditionTodo>> getLootTodo() {
-        return lootTodo;
-    }
-
-    public void clearMobSpawnerTodo() {
-        mobSpawnerTodo.clear();
-    }
-
-    public void clearLootTodo() {
-        lootTodo.clear();
     }
 
     public CompiledPalette getCompiledPalette() {
