@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed loot and spawner generation so that it happens more consistently now
+
 1.16-4.0.6-alpha:
 - The ILostCities API is back
 
